# rust-cli-template

./: .gitignore  .travis.yml  LICENSE  README.md  template.toml
{{bin}}/: .gitignore  CHANGELOG  Cargo.toml  LICENSE  README.md  appveyor.yml
{{bin}}/src/: cli.rs  errors.rs  main.rs  terminal.rs
{{project_name}}/: .travis.yml  Cargo.toml  LICENSE  appveyor.yml  build.rs
{{project_name}}/ci/: before_deploy.ps1  before_deploy.sh
{{project_name}}/src/: main.rs  terminal.rs
