[package]
name = "{{project_name}}"
description = "{{description}}"
version = "0.1.0"
authors = ["{{author}} <{{email}}>"]
{% if license != "None" -%}
license = "{{license}}"
{%- endif %}

[[bin]]
name = "{{bin}}"

[dependencies]
clap = "2"

{%- if shell_completions %}

[build-dependencies]
clap = "2"
{%- endif %}
